# Kalman_filter

./: .gitignore  ReadMe.md  meson.build  meson_options.txt  notes.md
.github/workflows/: ci.yml
src/: Kalman.cpp  Kalman.hpp  KalmanMatrices.cpp  Parser.cpp  Parser.hpp  UDPClient.cpp  UDPClient.hpp  UDPclient.cpp  UDPclient.hpp  colour.hpp  main.cpp  meson.build  types.hpp  vec3.hpp
testing_input/: Server.cpp  Server.hpp  UDPClient.cpp  UDPClient.hpp  main.cpp
